fix: overflowing text in node info

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -431,3 +431,7 @@ button.logout {
 .shadow {
   box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important
 }
+
+.word-break-all {
+  word-break: break-all;
+}
